--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=7.0.0",
-        "avored/module-installer": "dev-master"
+      "php": ">=7.1.3",
+      "avored/module-installer": "1.*",
+      "avored/framework": "1.*",
+      "avored/ecommerce": "1.*"
     },
   "autoload": {
     "classmap": [
