--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "require": {
       "php": ">=7.1.3",
       "avored/module-installer": "1.*",
-      "avored/framework": "1.*",
-      "avored/ecommerce": "1.*"
+      "avored/framework": "dev-master",
+      "avored/ecommerce": "dev-master"
     },
   "autoload": {
     "classmap": [
