--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 	"require" : {
 		"php" : ">=7.1.3",
 		"avored/module-installer" : "1.*",
-		"avored/ecommerce" : "dev-master"
+		"avored/ecommerce" : "1.*"
 	},
 	"autoload" : {
 		"classmap" : [
