--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
 	],
 	"require" : {
 		"php" : ">=7.1.3",
-		"avored/module-installer" : "1.*",
-		"avored/framework" : "~2.0"
+		"avored/module-installer" : "1.*"
 	},
 	"autoload" : {
 		"classmap" : [
